data/derived/fa15/progs/unify/prog3711.ml.out
Characters 97-99:
  | Sine sine		    -> sin(pi*eval(sine,x,y))
                          ^^
Error: This expression has type float but an expression was expected of type
         int
